--- a/Zaczy.SongBook.WPF/MainWindow.xaml
+++ b/Zaczy.SongBook.WPF/MainWindow.xaml
@@ -1,33 +1,56 @@
-﻿<Window x:Class="Zaczy.SongBook.WPF.MainWindow"
+﻿<mah:MetroWindow x:Class="Zaczy.SongBook.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zaczy.SongBook.WPF"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Loaded="Window_Loaded"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="SongBook" 
+        Height="1000" 
+        Width="1800"
+        WindowStartupLocation="CenterScreen"
+        GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
+        BorderThickness="1"
+        Background="{DynamicResource MahApps.Brushes.Accent}"
+        >
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" MinHeight="100"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" MinHeight="100"/>
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0">
-            <MenuItem Header="_Plik">
+        <Menu 
+            Grid.Row="0"
+            Background="{DynamicResource MahApps.Brushes.Accent}"
+            >
+            <MenuItem 
+                Header="_Plik" 
+                Background="{DynamicResource MahApps.Brushes.Accent}"
+                 >
                 <MenuItem Header="_Nowy" Click="NewMenuItem_Click"/>
                 <MenuItem Header="_Otwórz z pliku" Click="OpenMenuItem_Click"/>
                 <MenuItem Header="_Zapisz w bazie danych" Click="SaveMenuItem_Click"/>
                 <Separator/>
-                <MenuItem Header="E_xit" Click="ExitMenuItem_Click"/>
+                <MenuItem Header="E_xit"/>
             </MenuItem>
-            <MenuItem Header="_Help">
-                <MenuItem Header="_About" Click="AboutMenuItem_Click"/>
+            <MenuItem 
+                Header="_Help"
+                Background="{DynamicResource MahApps.Brushes.Accent}"
+                >
+                <MenuItem Header="_About"/>
             </MenuItem>
         </Menu>
-        <TabControl Grid.Row="1">
-            <TabItem Header="Zapisane">
+        <mah:MetroTabControl 
+            Grid.Row="1"
+            FontSize="10"
+            >
+            <mah:MetroTabItem 
+                Header="Zapisane"
+                >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -55,45 +78,58 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
                             <DataGridTextColumn Header="Tytuł" Binding="{Binding Title}" Width="*"/>
-                            <DataGridTextColumn Header="Artysta" Binding="{Binding Artist}" Width="150"/>
+                            <DataGridTextColumn Header="Artysta" Binding="{Binding Artist}" Width="*"/>
                             <DataGridTextColumn Header="Dodano" Binding="{Binding CreatedAt, StringFormat='{}{0:yyyy-MM-dd HH:mm}'}" Width="130"/>
+                            <DataGridTextColumn Header="Zaktualizowano" Binding="{Binding UpdatedAt, StringFormat='{}{0:yyyy-MM-dd HH:mm}'}" Width="130"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
-            </TabItem>
-            <TabItem Header="Source">
+            </mah:MetroTabItem>
+            <mah:MetroTabItem Header="Source">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                <TextBox 
-                    x:Name="SongTextBox"
-                    Grid.Row="0" 
-                    Margin="5" 
-                    TextWrapping="Wrap" 
-                    AcceptsReturn="True" 
-                    VerticalScrollBarVisibility="Auto"
-                    Text="{Binding Path=ViewModel.SourceSongHtml, Mode=TwoWay}" 
-                    TextChanged="SongTextBox_TextChanged"
-                    />
-                <Button 
-                    Grid.Row="1"
-                    x:Name="AnalizujBtn" 
-                    Content="Analizuj" 
-                    Width="90"
-                    Height="20"
-                    VerticalAlignment="Bottom"
-                    HorizontalAlignment="Right"
-                    Margin="0,5,20,5"
-                    Click="AnalizujBtn_Click"
-                    />
+                    <TextBox 
+                        x:Name="SongTextBox"
+                        Grid.Row="0" 
+                        Margin="5" 
+                        TextWrapping="Wrap" 
+                        AcceptsReturn="True" 
+                        VerticalScrollBarVisibility="Auto"
+                        Text="{Binding Path=ViewModel.SourceSongHtml, Mode=TwoWay}" 
+                        TextChanged="SongTextBox_TextChanged"
+                        />
+                    <Button 
+                        Grid.Row="1"
+                        x:Name="AnalizujBtn" 
+                        Content="Analizuj" 
+                        Width="90"
+                        Height="25"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Margin="0,5,20,5"
+                        Click="AnalizujBtn_Click"
+                        Style="{StaticResource MahApps.Styles.Button.Flat}"
+                        />
                 </Grid>
-            </TabItem>
-        </TabControl>
-        <TabControl
-            Grid.Row="2">
-            <TabItem Header="Tekst">
+            </mah:MetroTabItem>
+        </mah:MetroTabControl>
+        
+        <!-- GridSplitter między górną i dolną częścią -->
+        <GridSplitter 
+            Grid.Row="2" 
+            Height="5" 
+            HorizontalAlignment="Stretch" 
+            VerticalAlignment="Center"
+            Background="{DynamicResource MahApps.Brushes.Accent}"
+            ShowsPreview="True"
+            ResizeDirection="Rows"
+            />
+        
+        <mah:MetroTabControl Grid.Row="3">
+            <mah:MetroTabItem Header="Tekst">
                 <Grid Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100"/>
@@ -107,6 +143,7 @@
                         <RowDefinition Height="30"/>
                         <RowDefinition Height="30"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
 
                     <!-- Toolbar z przyciskami -->
@@ -116,22 +153,20 @@
                         <Button Content="Tonacja -" Click="ToneDownButton_Click" Padding="10,2"/>
                     </ToolBar>
 
-
                     <Label Grid.Row="1">Tytuł</Label>
-
                     <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Title}" Grid.Row="1" Grid.Column="1" Height="25" />
 
                     <Label Grid.Row="2">Artysta</Label>
-                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Artist}" Grid.Row="2" Grid.Column="1"  Height="25"/>
+                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Artist}" Grid.Row="2" Grid.Column="1" Height="25"/>
 
                     <Label Grid.Row="3">Tekst</Label>
-                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.LyricsAuthor}" Grid.Row="3" Grid.Column="1"  Height="25"/>
+                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.LyricsAuthor}" Grid.Row="3" Grid.Column="1" Height="25"/>
 
                     <Label Grid.Row="4">Muzyka</Label>
-                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.MusicAuthor}" Grid.Row="4" Grid.Column="1"  Height="25"/>
+                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.MusicAuthor}" Grid.Row="4" Grid.Column="1" Height="25"/>
 
                     <Label Grid.Row="5">Kapo</Label>
-                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Capo}" Grid.Row="5" Grid.Column="1"  Height="25"/>
+                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Capo}" Grid.Row="5" Grid.Column="1" Height="25"/>
 
                     <TextBox
                         Text="{Binding Path=ViewModel.ConvertedSong.Lyrics}" 
@@ -140,16 +175,21 @@
                         Grid.Row="6"
                         Padding="10,5,10,5"
                         FontFamily="Lucida Console"
+                        AcceptsReturn="True"
+                        AcceptsTab="True"
+                        TextWrapping="Wrap"
+                        VerticalScrollBarVisibility="Auto"
                         />
+                    <Label Grid.Row="7">Niestandardowe wersje chwytów</Label>
+                    <TextBox Text="{Binding Path=ViewModel.ConvertedSong.ChordsVariations}" Grid.Row="7" Grid.Column="1" Height="25"/>
                 </Grid>
-            </TabItem>
-            <TabItem Header="HTML">
+            </mah:MetroTabItem>
+            <mah:MetroTabItem Header="HTML">
                 <WebBrowser 
                     x:Name="PreviewBrowser" 
-                    Grid.Row="2"
                     Source="about:blank"
                     />
-            </TabItem>
-        </TabControl>
+            </mah:MetroTabItem>
+        </mah:MetroTabControl>
     </Grid>
-</Window>
+</mah:MetroWindow>
