--- a/Zaczy.SongBook.WPF/MainWindow.xaml
+++ b/Zaczy.SongBook.WPF/MainWindow.xaml
@@ -7,7 +7,6 @@
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Loaded="Window_Loaded"
         Title="SongBook" 
         Height="1000" 
@@ -61,10 +60,10 @@
                         </ToolBar>
 
                         <!-- Tabela piosenek -->
-                        <DataGrid 
+                        <DataGrid   
                             Grid.Row="1"
                             x:Name="SongsDataGrid"
-                            ItemsSource="{Binding ViewModel.Songs}"
+                            ItemsSource="{Binding Songs}"
                             AutoGenerateColumns="False"
                             IsReadOnly="True"
                             SelectionMode="Single"
@@ -96,7 +95,7 @@
                             TextWrapping="Wrap" 
                             AcceptsReturn="True" 
                             VerticalScrollBarVisibility="Auto"
-                            Text="{Binding Path=ViewModel.SourceSongHtml, Mode=TwoWay}" 
+                            Text="{Binding SourceSongHtml, Mode=TwoWay}" 
                             TextChanged="SongTextBox_TextChanged"/>
 
                         <Button 
@@ -152,22 +151,22 @@
                         </ToolBar>
 
                         <Label Grid.Row="1">Tytuł</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Title}" Grid.Row="1" Grid.Column="1" Height="25" />
+                        <TextBox Text="{Binding ConvertedSong.Title, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Height="25" />
 
                         <Label Grid.Row="2">Artysta</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Artist}" Grid.Row="2" Grid.Column="1" Height="25"/>
+                        <TextBox Text="{Binding ConvertedSong.Artist, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Height="25"/>
 
                         <Label Grid.Row="3">Tekst</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.LyricsAuthor}" Grid.Row="3" Grid.Column="1" Height="25"/>
+                        <TextBox Text="{Binding ConvertedSong.LyricsAuthor, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Height="25"/>
 
                         <Label Grid.Row="4">Muzyka</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.MusicAuthor}" Grid.Row="4" Grid.Column="1" Height="25"/>
+                        <TextBox Text="{Binding ConvertedSong.MusicAuthor, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1" Height="25"/>
 
                         <Label Grid.Row="5">Kapo</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.Capo}" Grid.Row="5" Grid.Column="1" Height="25"/>
+                        <TextBox Text="{Binding ConvertedSong.Capo, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Height="25"/>
 
                         <TextBox
-                            Text="{Binding Path=ViewModel.ConvertedSong.Lyrics}" 
+                            Text="{Binding ConvertedSong.Lyrics, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                             Grid.Column="0" 
                             Grid.ColumnSpan="2" 
                             Grid.Row="6"
@@ -179,7 +178,7 @@
                             VerticalScrollBarVisibility="Auto"/>
 
                         <Label Grid.Row="7">Niestandardowe wersje chwytów</Label>
-                        <TextBox Text="{Binding Path=ViewModel.ConvertedSong.ChordsVariations}" Grid.Row="7" Grid.Column="1" Height="25"/>
+                        <TextBox Text="{Binding ConvertedSong.ChordsVariations, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Grid.Column="1" Height="25"/>
                     </Grid>
                 </mah:MetroTabItem>
 
