--- a/Zaczy.SongBook.MAUI/Pages/SongsPage.xaml
+++ b/Zaczy.SongBook.MAUI/Pages/SongsPage.xaml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:Zaczy.SongBook.MAUI.ViewModels"
-             xmlns:mi="http://www.aathifmahir.com/dotnet/2022/maui/icons"
-            
-             x:Class="Zaczy.SongBook.MAUI.Pages.SongsPage"
-             Title="Piosenki"
-             >
+<ContentPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:vm="clr-namespace:Zaczy.SongBook.MAUI.ViewModels"
+    xmlns:mi="http://www.aathifmahir.com/dotnet/2022/maui/icons"
+    xmlns:models="clr-namespace:Zaczy.SongBook;assembly=Zaczy.SongBook"
+    xmlns:data="clr-namespace:Zaczy.SongBook.Data;assembly=Zaczy.SongBook"
+    x:DataType="vm:SongListViewModel"            
+    x:Class="Zaczy.SongBook.MAUI.Pages.SongsPage"
+    Title="Piosenki">
 
     <ContentPage.ToolbarItems>
         <!-- Menu / Toolbar item that triggers import from API -->
@@ -14,15 +16,22 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <Grid RowDefinitions="Auto,Auto,*,Auto" Padding="12">
+        <Grid RowDefinitions="Auto,Auto,*,Auto">
             <!-- Filters -->
-            <StackLayout Orientation="Horizontal" Spacing="8" Grid.Row="0">
+            <StackLayout 
+                Orientation="Horizontal" 
+                Spacing="8" 
+                Grid.Row="0"
+                Background="{AppThemeBinding Light=#D6C6C0, Dark=#360702}"
+                Padding="12"
+                >
                 <Entry Placeholder="Tytuł lub wykonawca"
                        HorizontalOptions="FillAndExpand"
                        Text="{Binding TitleFilter}"
+                       PlaceholderColor="{AppThemeBinding Light=#FFF, Dark=#FFF}"
                        Completed="OnTitleFilterCompleted" />
                 <ImageButton 
-                    Source="{mi:Fluent Search20, IconSize=20, IconColor=#999}"
+                    Source="{mi:Fluent Search20, IconSize=20, IconColor={AppThemeBinding Light=#761610, Dark=#b66650}}"
                     Command="{Binding FilterCommand}"
                     HorizontalOptions="End"
                     MinimumHeightRequest="32"
@@ -30,7 +39,7 @@
                     BackgroundColor="Transparent"
                     />
                 <ImageButton 
-                    Source="{mi:Fluent FilterDismiss20, IconSize=20, IconColor=#999}"
+                    Source="{mi:Fluent FilterDismiss20, IconSize=20, IconColor={AppThemeBinding Light=#761610, Dark=#b66650}}"
                     Command="{Binding ClearCommand}"
                     HorizontalOptions="End"
                     MinimumHeightRequest="32"
@@ -46,12 +55,12 @@
                     BackgroundColor="Transparent"
                     />
             </StackLayout>
-
-
+            
             <!-- List -->
-            <CollectionView ItemsSource="{Binding Songs}" SelectionMode="Single" Grid.Row="2" x:Name="SongsCollection" Margin="0,30,0,10">
+            <CollectionView ItemsSource="{Binding Songs}" SelectionMode="Single" Grid.Row="2" x:Name="SongsCollection" Margin="12,20,12,10">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate>
+                    <!-- Use the actual item type stored in SongListViewModel.Songs -->
+                    <DataTemplate x:DataType="data:SongEntity">
                         <!-- Replace Border with a Grid that draws only top and bottom lines -->
                         <Grid Margin="0,0" Padding="0">
                           <Grid.RowDefinitions>
@@ -59,7 +68,7 @@
                           </Grid.RowDefinitions>
 
                           <!-- content -->
-                          <StackLayout Grid.Row="0" Padding="10,8,10,8" Background="#EEE" Margin="0,0,0,10">
+                            <StackLayout Grid.Row="0" Padding="15,10,10,10" Background="{AppThemeBinding Light=#EEE, Dark=#333}" Margin="0,0,0,10">
                             <Label Text="{Binding Title}" FontAttributes="Bold" LineBreakMode="TailTruncation" />
                             <Label Text="{Binding Artist}" FontSize="Small" TextColor="Gray" />
                             </StackLayout>
