--- a/Zaczy.SongBook.MAUI/Resources/Styles/Styles.xaml
+++ b/Zaczy.SongBook.MAUI/Resources/Styles/Styles.xaml
@@ -428,7 +428,7 @@
         <!--<Setter Property="BarBackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
         <Setter Property="BarTextColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource White}}" />
         <Setter Property="IconColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource White}}" />-->
-        <Setter Property="BarBackgroundColor" Value="#C88" />
+        <Setter Property="BarBackgroundColor" Value="{AppThemeBinding Light=#862620, Dark=#761610}" />
         <Setter Property="BarTextColor" Value="#FFF" />
         <Setter Property="IconColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource White}}" />
     </Style>
