--- a/Zaczy.SongBook.MAUI/Pages/SettingsPage.xaml
+++ b/Zaczy.SongBook.MAUI/Pages/SettingsPage.xaml
@@ -5,7 +5,7 @@
              x:Class="Zaczy.SongBook.MAUI.Pages.SettingsPage"
              x:DataType="vm:UserViewModel"
              Title="Ustawienia">
-    <Grid Padding="12" RowDefinitions="Auto,Auto,Auto,Auto,Auto,*"  ColumnDefinitions="4*,6*" RowSpacing="12">
+    <Grid Padding="12" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"  ColumnDefinitions="4*,6*" RowSpacing="12">
         <Label Grid.Row="0" Text="Preferencje użytkownika" FontAttributes="Bold" FontSize="20" Grid.ColumnSpan="2" />
 
             <Label Text="Modyfikacja wielkości czcionki (px)" 
@@ -75,12 +75,13 @@
                 Grid.Row="3"                   
                 Grid.Column="1"
                 >
-                <RadioButton x:Name="RadioPre"
-                             Content="Stała szerokość"
-                            FontSize="{OnIdiom 12, Tablet=16 }"
-                             CheckedChanged="OnLyricsVersionRadioChanged" 
-                             Margin="0"
-                             />
+                <RadioButton 
+                    x:Name="RadioPre"
+                    Content="Stała szerokość"
+                    FontSize="{OnIdiom 12, Tablet=16 }"
+                    CheckedChanged="OnLyricsVersionRadioChanged" 
+                    Margin="0"
+                    />
                 <RadioButton x:Name="RadioRelative"
                             FontSize="{OnIdiom 12, Tablet=16 }"
                              Content="Html formatowany"
@@ -97,7 +98,6 @@
                 FontSize="{OnIdiom 12, Tablet=16 }"
                 Margin="0,10,1,0" />
 
-            <!-- use Grid so the Label gets a star-width column and can wrap -->
             <Grid Grid.Row="4" Grid.Column="1" VerticalOptions="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -116,10 +116,71 @@
                        LineBreakMode="WordWrap"
                        FontSize="10"
                        MaxLines="5"
+                       TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}"
+                       
                        />
             </Grid>
 
-        <StackLayout Grid.Row="5" Orientation="Horizontal" VerticalOptions="End" Spacing="12" HorizontalOptions="Center" Grid.ColumnSpan="2" Margin="0,0,0,20">
+        <Label
+                Text="Ukryj tabulatury"
+                Grid.Row="5"
+                Grid.Column="0"
+                FontSize="{OnIdiom 12, Tablet=16 }"
+                Margin="0,10,1,0" />
+
+        <Grid Grid.Row="5" Grid.Column="1" VerticalOptions="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Switch Grid.Column="0"
+                        IsToggled="{Binding SkipTabulatures, Mode=TwoWay}"
+                        VerticalOptions="Center"
+                        Margin="0,0,10,0"
+                        />
+
+            <Label Grid.Column="1"
+                       Text="{Binding SkipTabulaturesTxt}"
+                       VerticalOptions="Center"
+                       LineBreakMode="WordWrap"
+                       FontSize="10"
+                       MaxLines="5"
+                       TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}"
+                   
+                       />
+        </Grid>
+
+        <Label
+                Text="Nie pokazuj akordów"
+                Grid.Row="6"
+                Grid.Column="0"
+                FontSize="{OnIdiom 12, Tablet=16 }"
+                Margin="0,10,1,0" />
+
+        <Grid Grid.Row="6" Grid.Column="1" VerticalOptions="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Switch Grid.Column="0"
+                        IsToggled="{Binding SkipLyricChords, Mode=TwoWay}"
+                        VerticalOptions="Center"
+                        Margin="0,0,10,0"
+                        />
+
+            <Label Grid.Column="1"
+                       Text="{Binding SkipLyricChordsTxt}"
+                       VerticalOptions="Center"
+                       LineBreakMode="WordWrap"
+                       FontSize="10"
+                       MaxLines="5"
+                       TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}"
+                       />
+        </Grid>        
+
+        <StackLayout Grid.Row="7" Orientation="Horizontal" VerticalOptions="End" Spacing="12" HorizontalOptions="Center" Grid.ColumnSpan="2" Margin="0,0,0,20">
             <Button Text="Resetuj" Clicked="OnResetClicked" />
             <Button Text="Zamknij" Clicked="OnCloseClicked"  />
         </StackLayout>
