--- a/Zaczy.SongBook.MAUI/Pages/SongsPage.xaml
+++ b/Zaczy.SongBook.MAUI/Pages/SongsPage.xaml
@@ -12,7 +12,9 @@
 
     <ContentPage.ToolbarItems>
         <!-- Menu / Toolbar item that triggers import from API -->
-        <ToolbarItem Text="Import" Command="{Binding FetchCommand}" Order="Primary" Priority="0" />
+        <!--ToolbarItem Text="Import" Command="{Binding FetchCommand}" Order="Primary" Priority="0" /-->
+        <ToolbarItem Text="Katalogi piosenek" Command="{Binding CategoriesCommand}" Order="Primary" Priority="0" />
+        <ToolbarItem Command="{Binding CategoriesCommand}" Order="Primary" Priority="0" IconImageSource="collect_ico.png" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -22,7 +24,7 @@
                 Orientation="Horizontal" 
                 Spacing="8" 
                 Grid.Row="0"
-                Background="{AppThemeBinding Light=#D6C6C0, Dark=#360702}"
+                Background="{AppThemeBinding Light=#D6C6C0, Dark=#100707}"
                 Padding="12"
                 >
                 <Entry Placeholder="Tytuł lub wykonawca"
@@ -68,7 +70,7 @@
                           </Grid.RowDefinitions>
 
                           <!-- content -->
-                            <StackLayout Grid.Row="0" Padding="15,10,10,10" Background="{AppThemeBinding Light=#EEE, Dark=#333}" Margin="0,0,0,10">
+                            <StackLayout Grid.Row="0" Padding="15,10,10,10" BackgroundColor="{Binding CategoryColor}" Margin="0,0,0,10">
                             <Label Text="{Binding Title}" FontAttributes="Bold" LineBreakMode="TailTruncation" />
                             <Label Text="{Binding Artist}" FontSize="Small" TextColor="Gray" />
                             </StackLayout>
@@ -90,6 +92,20 @@
                 Grid.Row="3"
                 />
 
+            <!-- Overlay loading indicator bound to VM.IsBusy -->
+            <AbsoluteLayout Grid.Row="0" Grid.RowSpan="4" IsVisible="{Binding IsBusy}" Opacity="0.3">
+                <BoxView AbsoluteLayout.LayoutBounds="0,0,1,1"
+                         AbsoluteLayout.LayoutFlags="All"
+                         Color="{AppThemeBinding Light=#FFF, Dark=#000}"
+                         IsVisible="{Binding IsBusy}" />
+
+                <ActivityIndicator AbsoluteLayout.LayoutBounds="0.5,0.5,48,48"
+                                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                                   IsRunning="{Binding IsBusy}"
+                                   IsVisible="{Binding IsBusy}"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Center" />
+            </AbsoluteLayout>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
